--- a/csst6.html
+++ b/csst6.html
@@ -94,13 +94,12 @@
     <div id="id01" class="modal">
         <form class="modal-content animate" action="/onLogin.php" method="post">
             <div class="imgcontainer">
-                <img src="./../images/avatar.png" alt="Avatar" class="avatar" />
+                <img src="profile.png" alt="Avatar" class="avatar" />
             </div>
 
             <div class="container">
                 <label for="uname"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" name="uname" required />
-
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="psw" required />
 
@@ -116,7 +115,7 @@
                     Cancel
                 </button>
                 <span class="psw"><a href="#">Forgot password?</a></span>
-                <span class="signup"><a href="./cssTask7.html">Don't have an account? Sign Up</a></span>
+                <span class="signup"><a href="#">Don't have an account? Sign Up</a></span>
             </div>
         </form>
     </div>
