--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
         <section>
             <h2>HTML Tasks:</h2>
             <ul>
-                <li><a href="./HTML-Tasks/task1.html">Task 1: HTML Table</a></li>
-                <li><a href="./HTML-Tasks/task2.html">Task 2: HTML List</a></li>
-                <li><a href="./HTML-Tasks/task3.html">Task 3: HTML Hyperlink</a></li>
-                <li><a href="./HTML-Tasks/task4.html">Task 4: HTML Form</a></li>
-                <li><a href="./HTML-Tasks/task5.html">Task 5: Registration Form</a></li>
+                <li><a href="task1.html">Task 1: HTML Table</a></li>
+                <li><a href="task2.html">Task 2: HTML List</a></li>
+                <li><a href="task3.html">Task 3: HTML Hyperlink</a></li>
+                <li><a href="task4.html">Task 4: HTML Form</a></li>
+                <li><a href="task5.html">Task 5: Registration Form</a></li>
             </ul>
         </section>
         <section>
             <h2>CSS Tasks:</h2>
             <ul>
-                <li><a href="./CSS-Tasks/cssTask1.html">Task 1: CSS Rounded Corners</a></li>
-                <li><a href="./CSS-Tasks/cssTask2.html">Task 2: Horizontal and Vertical Navbar</a></li>
-                <li><a href="./CSS-Tasks/cssTask3.html">Task 3: CSS Styling for Table</a></li>
-                <li><a href="./CSS-Tasks/cssTask4.html">Task 4: Hoverable Side Navbar</a></li>
-                <li><a href="./CSS-Tasks/cssTask5.html">Task 5: Styled Page</a></li>
-                <li><a href="./CSS-Tasks/cssTask6.html">Task 6: Login Page</a></li>
-                <li><a href="./CSS-Tasks/cssTask7.html">Task 7: Signup Page</a></li>
+                <li><a href="csst1.html">Task 1: CSS Rounded Corners</a></li>
+                <li><a href="csst2.html">Task 2: Horizontal and Vertical Navbar</a></li>
+                <li><a href="csst3.html">Task 3: CSS Styling for Table</a></li>
+                <li><a href="csst4.html">Task 4: Hoverable Side Navbar</a></li>
+                <li><a href="csst5.html">Task 5: Styled Page</a></li>
+                <li><a href="csst6.html">Task 6: Login Page</a></li>
+                <li><a href="csst7.html">Task 7: Signup Page</a></li>
             </ul>
         </section>
     </main>
