--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </section>
     </main>
     <footer>
-        <p>Created by SaiSreekar | Registration Number: 21BDS0387</p>
+        <p>ABHIRAM</p>
     </footer>
 </body>
 
